[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Shop/WeaponShop/WeaponShop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Shop/Menu/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Shop/SellShop/SellShop.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GUI/GuiButton/GuiButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Shop/Shop.gd" type="Script" id=8]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=9]
[ext_resource path="res://CustomNodes/AudioPlayer/AudioPlayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Musics/Mountain-Pass_-Peaceful-Adventure-Game-Music-by-HeatleyBros.ogg" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="Label" parent="Menu/MenuItems/Weapons/GuiPanel" index="1"]
text = "Weapons"

[node name="Label" parent="Menu/MenuItems/Sell/GuiPanel" index="1"]
text = "Sell"

[node name="WeaponShop" parent="." instance=ExtResource( 1 )]
visible = false

[node name="SellShop" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 9 )
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/8691691433"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -54.0
margin_top = -202.0
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioPlayer" parent="." instance=ExtResource( 10 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="Tween" type="Tween" parent="."]

[node name="BackButton" parent="." instance=ExtResource( 5 )]
visible = false
anchor_top = 1.0
anchor_right = 0.0
margin_left = 8.0
margin_top = -122.0
margin_right = 231.0
margin_bottom = -24.0

[node name="Label" type="Label" parent="BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="tree_exiting" from="." to="." method="_on_Shop_tree_exiting"]
[connection signal="pressed" from="Menu/MenuItems/Weapons/GuiButton" to="." method="_on_WeaponMenu_pressed"]
[connection signal="pressed" from="Menu/MenuItems/Sell/GuiButton" to="." method="_on_SellButton_pressed"]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[editable path="Menu"]
[editable path="Menu/TexturedBackground"]
[editable path="Menu/MenuItems/Weapons"]
[editable path="Menu/MenuItems/Sell"]
[editable path="WeaponShop"]
[editable path="WeaponShop/TexturedBackground"]
[editable path="WeaponShop/ShopTitle"]
[editable path="SellShop"]
[editable path="SellShop/ShopTitle"]
